Add Monaco editor files to wwwroot

--- a/DiceTracker.Website/wwwroot/index.html
+++ b/DiceTracker.Website/wwwroot/index.html
@@ -7,6 +7,18 @@
     <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <link rel="stylesheet" href="index.css">
+    <script src="monaco/node_modules/monaco-editor/min/vs/loader.js"></script>
+    <script>
+        require.config({ paths: { vs: "monaco/node_modules/monaco-editor/min/vs" } });
+
+        window.monacoReady = false;
+        require(["vs/editor/editor.main"], function () {
+            window.monacoReady = true;
+
+            if (window.monacoOnReady)
+                window.monacoOnReady();
+        });
+    </script>
 </head>
 <body>
     <div id="main" class="is-dark">Loading...</div>
