--- a/DiceTracker.Website/wwwroot/index.html
+++ b/DiceTracker.Website/wwwroot/index.html
@@ -12,6 +12,25 @@
         require.config({ paths: { vs: "monaco/node_modules/monaco-editor/min/vs" } });
 
         window.monacoReady = false;
+        window.monacoCreate = function (id, text, lang) {
+            function doCreate() {
+                return monaco.editor.create(document.getElementById(id), {
+                    value: text,
+                    language: lang
+                });
+            }
+
+            if (window.monacoReady) {
+                return Promise.resolve(doCreate());
+            } else {
+                return new Promise((res, rej) => {
+                    window.monacoOnReady = function () {
+                        res(doCreate())
+                    };
+                });
+            }
+        }
+
         require(["vs/editor/editor.main"], function () {
             window.monacoReady = true;
 
@@ -21,7 +40,7 @@
     </script>
 </head>
 <body>
-    <div id="main" class="is-dark">Loading...</div>
+    <div id="main" class="main is-dark">Loading...</div>
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
