Begin implementing evaluator

--- a/DiceTracker.Website/wwwroot/index.html
+++ b/DiceTracker.Website/wwwroot/index.html
@@ -7,7 +7,7 @@
     <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <link rel="stylesheet" href="index.css">
-    <script src="monaco/node_modules/monaco-editor/min/vs/loader.js"></script>
+    <!--<script src="monaco/node_modules/monaco-editor/min/vs/loader.js"></script>
     <script>
         require.config({ paths: { vs: "monaco/node_modules/monaco-editor/min/vs" } });
 
@@ -37,7 +37,7 @@
             if (window.monacoOnReady)
                 window.monacoOnReady();
         });
-    </script>
+    </script>-->
 </head>
 <body>
     <div id="main" class="main is-dark">Loading...</div>
