--- a/DiceTracker.Website/loading.html
+++ b/DiceTracker.Website/loading.html
@@ -1,3 +1,3 @@
 ﻿<div class="loading-wrapper">
-    <div><span class="loader"></span> ${Text}</div>
+    <div><div style="display:inline-block"><span class="loader"></span></div> ${Text}</div>
 </div>
