Update application to download libraries to the local filesystem

--- a/DiceTracker.Website/loading.html
+++ b/DiceTracker.Website/loading.html
@@ -1,3 +1,10 @@
-﻿<div class="loading-wrapper">
-    <div><div style="display:inline-block"><span class="loader"></span></div> ${Text}</div>
-</div>
+﻿<template id="Loader">
+    <div class="loading-wrapper">
+        <div><div style="display:inline-block"><span class="loader"></span></div> ${Text}</div>
+    </div>
+</template>
+<template id="LoadError">
+    <div class="loading-wrapper">
+        <pre>${Error}</pre>
+    </div>
+</template>
