Beggin transition to using Ace like TryFSharpOnWasm

--- a/DiceTracker.Website/main.html
+++ b/DiceTracker.Website/main.html
@@ -1,5 +1,6 @@
 ﻿<script src="${PlotlyUrl}"></script>
-<textarea id="editor" bind="${EditorText}"></textarea>
+<!--<textarea id="editor" bind="${EditorText}"></textarea>-->
+<div id="editor"></div>
 <nav class="navbar">
     <div class="navbar-item">
         <label for="snippet-selector">Snippet:&nbsp;</label>
