--- a/DiceTracker.Website/wwwroot/index.html
+++ b/DiceTracker.Website/wwwroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DiceTracker</title>
-    <base href="/">
+    <base href="/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <link rel="stylesheet" href="index.css">
 </head>
